--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 .card{
     width: 100%;
     max-width: 500px;
-    background-color: black;
+    background-color:white;
     border-radius:10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
     padding: 50px;
@@ -28,7 +28,7 @@ button{
     cursor: pointer;
     background-color: white;
     font-weight: bold;
-    border: 2px solid #000000;
+    border: 2px solid bisque;
     transition: 0.3s ease-in-out;
 }
 
@@ -38,7 +38,7 @@ button:hover{
 }
 
 img{
-    width: 40%;
-    height: 50%;
+    width: 35%;
+    height: 35%;
     margin-bottom: 40px;
 }
